primer commit mostrar espacio para ingresar palabra

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <html>
+  <head></head>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" />
+    <h1>Toros Y Vacas</h1>
+    <form id="codigosecreto-form">
+      <label for="codigosecreto"> Codigo Secreto:</label>
+      <input id="Codigo Secreto" />
+      <input type="submit" value="Empezar" />
+    </form>
+    <form id="adivinar-form">
+      <label for="intento">Intento:</label>
+      <input id="Intento" />
+      <input type="submit" value="Adivinar" />
     </form>
     <div id="resultado-div"></div>
 
