--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <body>
-    <h1>Sumador</h1>
+    <h1>UCB-WORDLE</h1>
     <form id="sumar-form">
       <label for="primer-numero">Primer número:</label>
       <input type="number" id="primer-numero" />
       <label for="segundo-numero">Segundo número:</label>
       <input type="number" id="segundo-numero" />
       <input type="submit" value="Sumar" />
-    </form>
+    </form>    
     <div id="resultado-div"></div>
 
     <script type="module" src="./src/presenter.js"></script>
