--- a/index.html
+++ b/index.html
@@ -1,28 +1,14 @@
 <html>
   <head></head>
   <body>
-<<<<<<< HEAD
-    <h1>UCB-WORDLE</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" />
-    </form>    
-=======
-    <h1>Toros Y Vacas</h1>
+
+
+    <h1>WORDLE</h1>
     <form id="codigosecreto-form">
       <label for="codigosecreto"> Codigo Secreto:</label>
-      <input id="Codigo Secreto" />
-      <input type="submit" value="Empezar" />
+    <input type="codigoSecreto" id="clave1" minlength= "4" maxlength="6"/><br>
+    <input type="submit" value="Adivinar" />
     </form>
-    <form id="adivinar-form">
-      <label for="intento">Intento:</label>
-      <input id="Intento" />
-      <input type="submit" value="Adivinar" />
-    </form>
->>>>>>> 430c024ea09f859282981cd309019effe750e988
     <div id="resultado-div"></div>
 
     <script type="module" src="./src/presenter.js"></script>
