--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <html>
   <body>
-    <h1>UCB-WORDLE</h1>
-    <style>
-      h1{
-        text-align: center;
-        background-color: aquamarine;
-      }
-    </style>           
-      <form id="intento-form">
-        <label for="intento">Palabra: </label>
-        <input type="text" id="intento" style="text-transform: uppercase;" minlength= "5" maxlength="5" />
-        <input type="submit" value="Adivinar" />
-        <div id="resultado-div"></div>      
-      </form>          
-    <style>
-      form{
-        width: 400px;
-        padding: 10px;
-        margin: 0 auto;        
-      }      
-    </style>
-    <script type="module" src="./src/presenter.js"></script>
+    <center>
+    <h1> UCB-WORDLE</h1>  
+    <form id="tutorial">
+      <h4> Cómo Jugar </h4>     
+      <p> Adivina la palabra oculta en seis intentos.</p>
+      <p> Cada intento debe ser una palabra válida de 5 letras.</p>
+      <p> Después de cada intento el color de las letras cambia para mostrar qué tan cerca estás de acertar la palabra. </p>
+      <p>
+        <span style="color: green">Verde </span>
+        indica que la letra esta en la posicion corecta. 
+      </p>
+      <p>
+        <span style="color: rgb(189, 197, 25)">Amarillo </span>
+        indica que la letra esta en la posicion in corecta. 
+      </p>
+      <p> En caso de no tener color la letra no se encuentra en la palabra.</p>
+      <h4>Pasos del Juego</h4>
+      <p> Elegir una modalidad de juego.</p>
+      <p> Ingresar una palabra real como intento.</p>
+      <p> Ver las pistas del intento anterior.</p>
+      <p> Ingresar una nueva palabra.</p>
+        <a href="index2.html">
+          <input type="button" value="INICIAR" />
+        </a>                
+    </form>   
+  </center>
   </body>
 </html>
