--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,9 @@
         <label for="intento">Palabra: </label>
         <input type="text" id="intento" style="text-transform: uppercase;" minlength= "4" maxlength="4" />
         <input type="submit" value="Adivinar" id="boton-adivinar" />
-        <div id="resultado-div"></div>      
+        <div id="resultado-div"></div>   
+        <div id="resultado-div2"></div>   
+        <div id="resultado-div3"></div>      
       </form>           
     <style>
       form{
