--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
       <form id="intento-form">
         <h1 id="titulo">UCB-WORDLE FACIL</h1>         
         <label for="intento">Palabra: </label>
-        <input type="text" id="intento" style="text-transform: uppercase;" minlength= "4" maxlength="4" />
+        <input type="text" id="intento" style="text-transform: uppercase;"/>
         <input type="submit" value="Adivinar" id="boton-adivinar" />
         <div id="resultado-div"></div>   
         <div id="resultado-div2"></div>   
