--- a/index2.html
+++ b/index2.html
@@ -12,12 +12,16 @@
       <form id="intento-form">
         <h1 id="titulo">UCB-WORDLE FACIL</h1>         
         <label for="intento">Palabra: </label>
-        <input type="text" id="intento" style="text-transform: uppercase;" minlength= "4" maxlength="4" />
+        <input type="text" id="intento" style="text-transform: uppercase;" minlength= "5" maxlength="5" />
         <input type="submit" value="Adivinar" id="boton-adivinar" />
         <div id="resultado-div"></div>   
         <div id="resultado-div2"></div>   
         <div id="resultado-div3"></div>      
-      </form>           
+      </form>
+      
+      <div id="contenedorCuadrados">
+        <div id="cuadrados"></div>
+      </div>
     <style>
       form{
         width: 400px;
