Mostrar palabras ya puestas y centreadas

--- a/index2.html
+++ b/index2.html
@@ -43,8 +43,14 @@
         border: 2px solid rgb(58, 58, 60);
         min-width: 60px;
         min-height: 60px;
-        font-size: 2rem;
+        font-size: 50px;
         font-weight: bold;
+        color: rgb(0, 0, 0);
+        text-transform: uppercase;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
       form{
         width: 400px;
