--- a/index2.html
+++ b/index2.html
@@ -10,13 +10,10 @@
       }
     </style>      
       <form id="intento-form">
-        <h1 id="titulo">UCB-WORDLE FACIL</h1>         
+        <h1 id="titulo">UCB-WORDLE</h1>         
         <label for="intento">Palabra: </label>
         <input type="text" id="intento" style="text-transform: uppercase;" minlength= "5" maxlength="5" />
-        <input type="submit" value="Adivinar" id="boton-adivinar" />
-        <div id="resultado-div"></div>   
-        <div id="resultado-div2"></div>   
-        <div id="resultado-div3"></div>      
+        <input type="submit" value="Adivinar" id="boton-adivinar" />               
       </form>
       
       <div id="contenedorCuadrados">
@@ -45,8 +42,8 @@
         min-height: 60px;
         font-size: 50px;
         font-weight: bold;
-        color: rgb(0, 0, 0);
-        text-transform: uppercase;
+        color: rgb(255, 255, 255);        
+        text-transform: uppercase;        
 
         display: flex;
         justify-content: center;
