--- a/index2.html
+++ b/index2.html
@@ -10,15 +10,16 @@
       }
     </style>      
       <form id="intento-form">
-        <h1 id="titulo">UCB-WORDLE</h1>         
+        <h1 id="titulo" style="color: white;">UCB-WORDLE</h1>         
         <label for="intento">Palabra: </label>
         <input type="text" id="intento" style="text-transform: uppercase;" minlength= "5" maxlength="5" />
-        <input type="submit" value="Adivinar" id="boton-adivinar" />               
+        <input type="submit" value="Adivinar" id="boton-adivinar" />
       </form>
       
       <div id="contenedorCuadrados">
         <div id="cuadrados"></div>
       </div>
+
     <style>
       #contenedorCuadrados {
         display: flex;
