--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
       <p> Cada intento debe ser una palabra válida de 5 letras.</p>
       <p> Después de cada intento el color de las letras cambia para mostrar qué tan cerca estás de acertar la palabra. </p>
       <p>
-        <span style="color: green">Verde </span>
-        indica que la letra esta en la posicion corecta. 
+        <span style="background: rgb(24, 187, 73)">Verde </span>
+        indica que la letra esta en la posicion correcta. 
       </p>
       <p>
-        <span style="color: rgb(189, 197, 25)">Amarillo </span>
-        indica que la letra esta en la posicion in corecta. 
+        <span style="background: rgb(189, 197, 25)">Amarillo </span>
+        indica que la letra esta en la posicion incorrecta. 
       </p>
-      <p> En caso de no tener color la letra no se encuentra en la palabra.</p>
-      <h4>Pasos del Juego</h4>
-      <p> Elegir una modalidad de juego.</p>
-      <p> Ingresar una palabra real como intento.</p>
-      <p> Ver las pistas del intento anterior.</p>
-      <p> Ingresar una nueva palabra.</p>
+      <p>
+        <span style="background: #707169">Plomo </span>
+        indica que la letra no esta en la palabra
+      </p>
         <a href="index2.html">
           <input type="button" value="INICIAR" />
         </a>                
