--- a/index2.html
+++ b/index2.html
@@ -1,26 +1,36 @@
 <html>
   <body>    
     <a href="index.html">
-      <input type="button" value="MENU" />
+      <input type="button" value="TUTORIAL" />
     </a>
     <style>
       h1{
         text-align: center;
         background-color: rgb(24, 187, 73);
       }
-    </style>      
+    </style>                
       <form id="intento-form">
         <h1 id="titulo" style="color: white;">UCB-WORDLE</h1>         
-        <label for="intento">Palabra: </label>
+        <label for="intento">Palabra: </label>        
         <input type="text" id="intento" style="text-transform: uppercase;" minlength= "5" maxlength="5" />
-        <input type="submit" value="Adivinar" id="boton-adivinar" />
-      </form>
-      
+        <input type="submit" value="Adivinar" id="boton-adivinar" />    
+      </form>      
       <div id="contenedorCuadrados">
         <div id="cuadrados"></div>
       </div>
-
+      <div id="pasos">
+        <h4> Pasos del Juego</h4>
+        <p> Ingresar una palabra real como intento.</p>
+        <p> Ver las pistas del intento dependiendo al color.</p>
+        <p> Ingresar una nueva palabra.</p>
+        <p> Por cada fin de juego cambia la palabra</p> 
+      </div>
     <style>
+      #pasos{
+        position: absolute;
+        top: 50%;
+        transform: translate(0, -50%);
+      }
       #contenedorCuadrados {
         display: flex;
         justify-content: center;
