--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </p>
       <p>
         <span style="background: #707169">Plomo </span>
-        indica que la letra no esta en la palabra
+        indica que la letra no esta en la palabra.
       </p>
         <a href="index2.html">
           <input type="button" value="INICIAR" />
